--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "Lyricks",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://oam-shah.github.io",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
@@ -28,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.3",
     "vite": "^2.9.9"
@@ -35,8 +39,5 @@
   "engines": {
     "node": "v16.17.1",
     "npm": "8.15.0"
-
   }
-
-  
 }
